@@ -7,20 +7,24 @@ import java.util.function.Supplier;
 
 public class ShoppingCartTest {
 
-    public static final int UP_TO = 1;
     public static final Long LOAD_LEVELX2 = 100_000L;
     private static CarritoDeLaCompra carritoCompra;
 
+    //----------------------------------------------------------------//
+    //-------NO OLVIDES LOS COMANDOS EN RUN/DEBUG CONFIGURATION-------//
+    //--------------------(-Xms4092m -XX:+PrintGC)--------------------//
+    //----------------------------------------------------------------//
+
     @BeforeClass
     public static void setUp() {
-        CarritoBuilder builder = new CarritoBuilder(LOAD_LEVELX2,1000000L);
+        CarritoBuilder builder = new CarritoBuilder(LOAD_LEVELX2, 1000000L);
         builder.add(-1L);
-        builder.addMultiple(LOAD_LEVELX2,1000000L);
+        builder.addMultiple(LOAD_LEVELX2, 1000000L);
         carritoCompra = builder.build();
     }
 
     @Test
-    public void testImperative(){
+    public void testImperative() {
 
         System.out.println("imperative = "
                 + testWith(() -> carritoCompra.detectarError()));
@@ -38,7 +42,7 @@ public class ShoppingCartTest {
     public void testAnyMatchParallel() {
 
         System.out.println("anyMatchParallel = "
-                + testWith(()-> carritoCompra.detectarErrorAnyMatchParallel()));
+                + testWith(() -> carritoCompra.detectarErrorAnyMatchParallel()));
     }
 
     @Test
@@ -46,21 +50,21 @@ public class ShoppingCartTest {
 
 
         System.out.println("findAny = " +
-            + testWith(() -> carritoCompra.detectarErrorFindAny()));
+                +testWith(() -> carritoCompra.detectarErrorFindAny()));
     }
 
     @Test
     public void testFindAnyParallel() {
 
         System.out.println("findAnyParallel = "
-            + testWith(() -> carritoCompra.detectarErrorFindAnyParallel()));
+                + testWith(() -> carritoCompra.detectarErrorFindAnyParallel()));
     }
 
     @Test
     public void testFindFirst() {
 
         System.out.println("findFirst = "
-            + testWith(() -> carritoCompra.detectarErrorFindFirst()) );
+                + testWith(() -> carritoCompra.detectarErrorFindFirst()));
 
     }
 
@@ -68,7 +72,7 @@ public class ShoppingCartTest {
     public void testFindFirstParallel() {
 
         System.out.println("findFirstParallel = "
-            + testWith(() -> carritoCompra.detectarErrorFindFirstParallel()));
+                + testWith(() -> carritoCompra.detectarErrorFindFirstParallel()));
 
 
     }
@@ -78,7 +82,7 @@ public class ShoppingCartTest {
         System.gc();
         System.out.println("Start----------------------");
 
-        long start  = System.currentTimeMillis();
+        long start = System.currentTimeMillis();
 
         method.get();
 
@@ -87,102 +91,75 @@ public class ShoppingCartTest {
         return end - start;
     }
 
+    //---------------------------------------------------------//
+    //---------------------ITERACIONES-------------------------//
+    //---------------------------------------------------------//
 
-    /*****************************************
-     @Test
-    public void testImperative(){
+    @Test
+    public void testImperativeIterations() {
 
-    carritoCompra.resetCounter();
-    //        System.out.println("imperative = "
-    testWith(() -> carritoCompra.detectarError());
-    long counter = carritoCompra.getCounter();
-    System.out.println("Iteraciones imperative = " + counter);
+        carritoCompra.resetCounter();
+        testWithIterations(() -> carritoCompra.detectarError());
+        long counter = carritoCompra.getCounter();
+        System.out.println("Iteraciones imperative = " + counter);
     }
 
-     @Test
-     public void testAnyMatch() {
+    @Test
+    public void testAnyMatchIterations() {
 
-     carritoCompra.resetCounter();
-     //        System.out.println("anyMatch = "
-     testWith(() -> carritoCompra.detectarErrorAnyMatch());
+        carritoCompra.resetCounter();
+        testWithIterations(() -> carritoCompra.detectarErrorAnyMatch());
+        long counter = carritoCompra.getCounter();
+        System.out.println("Iteraciones anyMatch = " + counter);
 
-     long counter = carritoCompra.getCounter();
-     System.out.println("Iteraciones anyMatch = " + counter);
+    }
 
-     }
+    @Test
+    public void testAnyMatchParallelIterations() {
 
-     @Test
-     public void testAnyMatchParallel() {
+        carritoCompra.resetCounter();
+        testWithIterations(() -> carritoCompra.detectarErrorAnyMatchParallel());
+        long counter = carritoCompra.getCounter();
+        System.out.println("Iteraciones anyMatchParallel = " + counter);
+    }
 
-     carritoCompra.resetCounter();
-     //        System.out.println("anyMatchParallel = "
-     testWith(()-> carritoCompra.detectarErrorAnyMatchParallel());
+    @Test
+    public void testFindAnyIterations() {
 
-     long counter = carritoCompra.getCounter();
-     System.out.println("Iteraciones anyMatchParallel = " + counter);
+        carritoCompra.resetCounter();
+        testWithIterations(() -> carritoCompra.detectarErrorFindAny());
+        long counter = carritoCompra.getCounter();
+        System.out.println("Iteraciones findAny = " + counter);
+    }
 
-     }
+    @Test
+    public void testFindAnyParallelIterations() {
 
-     @Test
-     public void testFindAny() {
+        carritoCompra.resetCounter();
+        testWithIterations(() -> carritoCompra.detectarErrorFindAnyParallel());
+        long counter = carritoCompra.getCounter();
+        System.out.println("Iteraciones findAnyParallel = " + counter);
+    }
 
-     carritoCompra.resetCounter();
+    @Test
+    public void testFindFirstIterations() {
 
-     //        System.out.println("findAny = " +
-     testWith(() -> carritoCompra.detectarErrorFindAny());
+        carritoCompra.resetCounter();
+        testWithIterations(() -> carritoCompra.detectarErrorFindFirst());
+        long counter = carritoCompra.getCounter();
+        System.out.println("Iteraciones findFirst = " + counter);
+    }
 
-     long counter = carritoCompra.getCounter();
-     System.out.println("Iteraciones findAny = " + counter);
-     }
+    @Test
+    public void testFindFirstParallelIterations() {
 
-     @Test
-     public void testFindAnyParallel() {
+        carritoCompra.resetCounter();
+        testWithIterations(() -> carritoCompra.detectarErrorFindFirstParallel());
+        long counter = carritoCompra.getCounter();
+        System.out.println("Iteraciones findFirstParallel = " + counter);
+    }
 
-     carritoCompra.resetCounter();
-
-     //        System.out.println("findAnyParallel = "
-     testWith(() -> carritoCompra.detectarErrorFindAnyParallel());
-
-     long counter = carritoCompra.getCounter();
-     System.out.println("Iteraciones findAnyParallel = " + counter);
-     }
-
-     @Test
-     public void testFindFirst() {
-
-     carritoCompra.resetCounter();
-     //        System.out.println("findFirst = "
-     testWith(() -> carritoCompra.detectarErrorFindFirst());
-
-     long counter = carritoCompra.getCounter();
-     System.out.println("Iteraciones findFirst = " + counter);
-
-     }
-
-     @Test
-     public void testFindFirstParallel() {
-
-     carritoCompra.resetCounter();
-     //        System.out.println("findFirstParallel = "
-     testWith(() -> carritoCompra.detectarErrorFindFirstParallel());
-
-     long counter = carritoCompra.getCounter();
-     System.out.println("Iteraciones findFirstParallel = " + counter);
-
-     }
-
-     private long testWith(Supplier<Boolean> method) {
-
-     System.gc();
-     //        System.out.println("Start----------------------");
-
-     long start  = System.currentTimeMillis();
-
-     method.get();
-
-     long end = System.currentTimeMillis();
-     //        System.out.println("End----------------------");
-     return end - start;
-     }
-     */
+    private void testWithIterations(Supplier<Boolean> method) {
+        method.get();
+    }
 }
